<resources>
     <string name="app_name">Hilt Force</string>
      <string name="welcome">Welcome %s</string>
     <string name="logout_button">Logout</string>
     <string name="fetch_contacts_button">Fetch Contacts</string>
     <string name="fetch_accounts_button">Fetch Accounts</string>
     <string name="clear_button">Clear</string>
      <string name="salesman">Sales Executive</string>
      <string name="current_server">CurrentServer</string>
      <string name="title_activity_home_nav">HomeNavActivity</string>
      <string name="navigation_drawer_open">Open navigation drawer</string>
      <string name="navigation_drawer_close">Close navigation drawer</string>
      <string name="nav_header_title">Android Studio</string>
      <string name="nav_header_subtitle">android.studio@android.com</string>
      <string name="nav_header_desc">Navigation header</string>
      <string name="action_settings">Settings</string>
      <string name="menu_home">Home</string>
      <string name="menu_gallery">Gallery</string>
      <string name="menu_slideshow">Slideshow</string>
      <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
      </string-array>
      <string name="openDrawer">open_drawer</string>
      <string name="closeDrawer">close_drawer</string>
      <string name="logout">Logout</string>
      <string name="press_back_again_to_exit">Press back again to exit</string>
      <string name="monthly_sales">Monthly Sales</string>
      <string name="pending_bill">Pending Bill</string>
      <string name="mobile">Mobile</string>
      <string name="pending_amt">Pending Amount</string>
      <string name="minus">-</string>
      <string name="plus">+</string>
      <string name="something_went_wrong">Something went wrong !!!</string>
      <string name="no_network_msg">No Internet Connection</string>
      <string name="comming_soon">Coming Soon</string>
      <string name="today_beat">Today Beat</string>
      <string name="other_beat">Other Beat</string>
      <string name="pending">Pending</string>
      <string name="complete">Complete</string>
      <string name="retailer_detail">Retailer Details</string>
      <string name="home">Home</string>
      <string name="new_outlet">New Outlet</string>
      <string name="visit">Visit</string>
      <string name="focus_order">Focus Order</string>
      <string name="search_product">Search Product</string>
      <string name="next">Next</string>
      <string name="total_selected_product_value">Total Selected Product (%1$s) : </string>
      <string name="total_selected_product">Total Selected Product : </string>
      <string name="rupee_symbol_amt">\u20B9 %1$s</string>
      <string name="rupee_symbol">\u20B9</string>
      <string name="personal_detail">Personal Detail</string>
      <string name="submit">Submit</string>
      <string name="cash">Cash</string>
      <string name="cheque">Cheque</string>
      <string name="retailer_collection">Retailer Collection</string>
      <string name="enter_amount">Enter Amount</string>
      <string name="add">Add</string>
      <string name="select_branch_code">Select branch code</string>
      <string name="enter_cheque_no">Enter cheque number</string>
      <string name="enter_cheque_date">Select cheque date</string>
      <string name="search">Search</string>
      <string name="please_ensure_you_have_whatsapp_installed">Please ensure you have WhatsApp installed</string>
      <string name="available_qty">Available (%1$s)</string>
      <string name="not_available_qty">Not Available (%1$s)</string>
      <string name="available">Available</string>
      <string name="not_available">Not Available</string>
      <string name="soq_amt">SOQ : %1$s</string>
      <string name="nbp_amt">NBP : %1$s</string>
      <string name="soq">SOQ : </string>
      <string name="nbp">NBP : </string>
      <string name="top15_order">Top15 Order</string>
      <string name="all_order">All Order</string>
      <string name="cancel">Cancel</string>
      <string name="ok">Ok</string>
      <string name="enter_quantity">Enter Quantity</string>
      <string name="tube">Tube Qty : %1$s</string>
      <string name="flap">Flap Qty : %1$s</string>
      <string name="quantity_not_available">Quantity not available</string>
      <string name="tube_not_available">Tube not available</string>
      <string name="flap_not_available">Flap not available</string>
      <string name="data_not_available">Data not available</string>
      <string name="order_summary">Order Summary</string>
      <string name="smart_search">Smart Search</string>
      <string name="prod_quantity_not_available">Product quantity not available </string>
      <string name="flap_tube_not_available">Flap/Tube not available</string>
      <string name="no_records_found">No Records found</string>
      <string name="error">Error</string>
      <string name="dialog_no_internet_msg">Seems You do not have active internet connection. Please connect to Internet and try again</string>
      <string name="retry">Retry</string>
      <string name="please_select_product">Please select product</string>
      <string name="please_select_branch_code">Select branch code</string>
      <string name="please_select_cheque_date">Select cheque date</string>
      <string name="please_enter_cheque_no">Enter cheque number</string>
      <string name="please_enter_amount">Enter amount</string>
      <string name="please_add_collection_amt">Please add collection amount</string>
      <string name="bank_details_no_available">Bank detail not available</string>
      <string name="warning">Warning</string>
      <string name="please_enter_valid_order_qty">Please add valid order quantity</string>
      <string name="feedback">Remarks/Feedback</string>
      <string name="title">Title</string>
      <string name="enter_feedback_remark">Enter feedback remark</string>
      <string name="please_enter_title">Please enter title</string>
      <string name="please_enter_feedback">Please enter feedback</string>
      <string name="select_bank_name">Select bank name</string>
      <string name="delete">Delete</string>
      <string name="do_you_really_want">Do you really want to delete this collection ?</string>
      <string name="total_product_value">Product amount (%1$s) : </string>
      <string name="tax_value">Tax (SGST + CGST) : </string>
      <string name="total_amt_value">Total amount (%1$s)</string>
      <string name="contact_number_not_available">Contact number not available</string>
      <string name="survey">Survey</string>
      <string name="outlet_dashboard">Outlet Dashboard</string>
      <string name="longitude">Longitude : </string>
      <string name="latitude">Latitude : </string>
      <string name="update_location">Update Location</string>
      <string name="price_list">Price List</string>
      <string name="select_cat">Select Category</string>
      <string name="select_sku">Select SKU</string>
      <string name="tyre_price">Total Price : </string>
      <string name="set_price">Set Price : </string>
      <string name="tube_price">Tube Price : </string>
      <string name="flap_price">Flap Price : </string>
      <string name="dbl_format_2_pts">%.2f</string>
      <string name="value_hyphen_value">%1$s - %2$s</string>
      <string name="general_detail">General Detail</string>
      <string name="distributor_branch">Distributor Branch</string>
      <string name="subdealer_name">Sub Dealer Name</string>
      <string name="email">Email Id</string>
      <string name="address1">Address 1</string>
      <string name="address2">Address 2</string>
      <string name="address3">Address 3</string>
      <string name="country">Country</string>
      <string name="state">State</string>
      <string name="district">District</string>
      <string name="town">Town</string>
      <string name="postal_code">Postal Code</string>
      <string name="pan_no">Pan Number</string>
      <string name="aadhar_no">Aadhar Number</string>
      <string name="gstin_no">GSTIN Number</string>
      <string name="setting_detail">Setting Detail</string>
      <string name="tcs_applicable">TCS Applicable</string>
      <string name="tcs_rate">TCS Rate (%)</string>
      <string name="tds_applicable">TDS Applicable</string>
      <string name="tds_rate">TDS Rate (%)</string>
      <string name="overdue_lock">Overdue Lock</string>
      <string name="credit_limit_active">Is Credit Limit Active</string>
      <string name="credit_days">Credit Days</string>
      <string name="credit_limit">Credit Limit</string>
      <string name="cash_discount_percent">Cash Discount Percent</string>
      <string name="cash_discount_limit">Cash Discount Limit</string>
      <string name="parent">Parent</string>
      <string name="credit_sales">Credit / Cash / Van Sales</string>
      <string name="salesman_name">Salesman Name</string>
      <string name="sales_route">Sales Route</string>
      <string name="delivery_boy">Delivery Boy</string>
      <string name="delivery_route">Delivery Route</string>
      <string name="category">Category</string>
      <string name="channel">Channel</string>
      <string name="group">Group</string>
      <string name="classes">Class</string>
      <string name="kyc_detail">KYC Details</string>
      <string name="bank_name">Bank Name</string>
      <string name="bank_branch">Bank Branch</string>
      <string name="account_number">Bank Account No</string>
      <string name="ifsc_code">IFSC Code</string>
      <string name="select_photo_id1">Select Photo ID 1</string>
      <string name="photo_id_no1">Photo ID number</string>
      <string name="photo_id_no2">Photo ID No 2</string>
      <string name="select_photo_id2">Select Photo ID 2</string>
      <string name="photo_id_img">Photo Id Image</string>
      <string name="shop_img">Shop Image</string>
      <string name="first_name">First Name</string>
      <string name="last_name">Last Name</string>
      <string name="dob">Date Of Birth</string>
      <string name="married">Is married</string>
      <string name="marriage_anniversary">Marriage Anniversary</string>
      <string name="preferred_language">Preferred Language</string>
      <string name="exclusive_to_business">Exclusive to Business?</string>
      <string name="other_business">Other Business</string>
      <string name="share_total_business">Share to Total Business</string>
      <string name="week_off">Weekly Off</string>
      <string name="crm_info">CRM Information</string>
      <string name="collection">Collection</string>
      <string name="please_select_category">Please select category</string>
      <string name="enter_first_name">Enter first name</string>
      <string name="enter_last_name">Enter last name</string>
      <string name="enter_your_email">Enter email id</string>
      <string name="error_enter_valid_email">Enter valid email id</string>
      <string name="enter_dob">Enter dob</string>
      <string name="enter_mobile_no">Mobile number can\'t blank</string>
      <string name="enter_valid_mobile_no">Enter valid mobile no</string>
      <string name="enter_name">Enter Name</string>
      <string name="enter_address">Enter Address</string>
      <string name="select_country">Select Country</string>
      <string name="select_state">Select State</string>
      <string name="select_district">Select District</string>
      <string name="select_town">Select Town</string>
      <string name="enter_postal_code">Enter postal code</string>
      <string name="enter_valid_postal_code">Enter valid postal code</string>
      <string name="is_registered">Is Registered</string>
      <string name="enter_pan_no">Enter pan number</string>
      <string name="passenger">Passenger</string>
      <string name="commercial">Commercial</string>
</resources>